fix 최종본